finished working on FreeTextSearch using mockup api
